--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/icon-256.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>PWA - Camera</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/images/icon-256.png"/>
   </head>
   <body>
-    <div id="app"></div>
+    <main id="camera">
+      <canvas id=""></canvas>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
