--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <img src="//:0" alt="" id="camera--output">
     <!-- Camera botão de tirar foto -->
     <button id="camera--trigger">tirar foto</button>
+    <button id="camera--virar">virar</button>
   </main>
   <script src="js/main.js" type="module"></script>
 </body>
